fix button width to look good on mobile

--- a/style.css
+++ b/style.css
@@ -168,6 +168,7 @@ footer {
 #reviewLogsBtn,
 #manageUsersBtn {
   display: none;
+  max-width: 150px;
 }
 
 body.student-mode #myPointsBtn {
@@ -265,11 +266,15 @@ body.admin-mode #manageUsersBtn {
 
   .nav-button.settings { 
   background-color: #38b9f0;
-  height: 70px; }
+  height: 70px;
+  max-width: 150px;
+ }
 
   .nav-button.faq { 
   background-color: #21a4ff;
-  height: 60px; }
+  height: 60px;
+  max-width: 150px;
+ }
 
 .nav-button {
   display: flex;
